<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_follower_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="prajwalthakur98@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>project_utils</depend>
  <depend>trajectory_follower_base</depend>
  <depend>dummy_lateral_controller</depend>
  <depend>dummy_longitudinal_controller</depend>
  <depend>visualization_msgs</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>eigen</depend>
  <depend>mpl_rclcpp_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
